[+] add submodules, cmake script and readme file [+] add example MEL script

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "src/RenderLib"]
+
 	path = src/RenderLib
+
 	url = git://github.com/joesfer/RenderLib.git
+
+[submodule "src/CoreLib"]
+
+	path = src/CoreLib
+	url = git://github.com/joesfer/CoreLib.git
