--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,22 @@ else()
 	add_definitions( -fPIC )
 	set( MAYA_DEFINITIONS "" )
 endif()
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+	message( "DEBUG BUILD" )
+	add_definitions( -D_DEBUG )
+endif( ${CMAKE_BUILD_TYPE} EQUAL "DEBUG" )
+
+if(MSVC)
+  # Force to always compile with W4
+  if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+  endif()
+elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+  # Update if necessary
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
+endif()
 
 find_package(OpenGL)
 
